--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^4.5.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.14.2",
     "react-map-gl": "^6.0.3",
     "react-scripts": "4.0.1",
     "reactstrap": "^8.8.1",
