--- a/server/package.json
+++ b/server/package.json
@@ -4,25 +4,27 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node scr/index.js",
+    "start": "node src/index.js",
     "dev": "nodemon src/index.js",
     "lint": "eslint src/"
   },
-  "author": "",
-  "license": "ISC",
+  "keywords": [],
+  "author": "CJ R. <cj@null.computer> (https://w3cj.now.sh)",
+  "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "helmet": "^4.3.1",
-    "mongoose": "^5.11.12",
-    "morgan": "^1.10.0"
+    "express-rate-limit": "^5.1.3",
+    "helmet": "^3.22.0",
+    "mongoose": "^5.9.11",
+    "morgan": "^1.10.0",
+    "rate-limit-mongo": "^2.1.0"
   },
   "devDependencies": {
-    "eslint": "^7.17.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.22.1",
-    "nodemon": "^2.0.7"
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.2",
+    "nodemon": "^2.0.3"
   }
 }
