updated CORS policy, updated author, updated .env path

--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint src/"
   },
   "keywords": [],
-  "author": "CJ R. <cj@null.computer> (https://w3cj.now.sh)",
+  "author": "Croberembt",
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
