--- a/server/now.json
+++ b/server/now.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "name": "travel-log-server",
+  "name": "oberembt-travel-log-server",
   "builds": [
     {
       "src": "src/index.js",
