removing cors due to error

--- a/server/now.json
+++ b/server/now.json
@@ -16,7 +16,6 @@
   "env": {
     "NODE_ENV": "production",
     "PORT": "1337",
-    "DATABASE_URL": "@travel-log-db",
-    "CORS_ORIGIN": "https://oberembt-travel-log.vercel.app/"
+    "DATABASE_URL": "@travel-log-db"
   }
 }
