--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
 NODE_ENV=development
 PORT=1337
 DATABASE_URL=mongodb+srv://travel-log-user:uqRt9Q2BrkKvZx7@cluster0.drfsc.mongodb.net/travel-log-db?retryWrites=true&w=majority
-CORS_ORIGIN=http://localhost:3000
+# CORS_ORIGIN=http://localhost:3000
